fix faq last question not showing on small screen

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,12 @@ body {
 	}
 }
 
+@media screen and (max-width: 1320px) {
+	html {
+		font-size: 11.5px;
+	}
+}
+
 @media screen and (max-width: 1200px) {
 	html {
 		overflow: scroll;
